removed local path and string based data import from api, replaced it with fileupload to make it worke when api is in remote location.